--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -796,7 +796,7 @@
                             <border type="none"/>
                             <children>
                               <grid id="3fd0" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                <margin top="0" left="0" bottom="0" right="0"/>
+                                <margin top="10" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                                 </constraints>
@@ -826,7 +826,7 @@
                                 </children>
                               </grid>
                               <grid id="36fdf" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                <margin top="0" left="0" bottom="0" right="0"/>
+                                <margin top="10" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                                 </constraints>
@@ -929,12 +929,14 @@
                                   </grid>
                                 </children>
                               </grid>
-                              <component id="caba5" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+                              <component id="caba5" class="javax.swing.JComboBox" binding="LECLevelComboBox">
                                 <constraints>
                                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
+                                  <font name="Eras Demi ITC" size="18"/>
                                   <model>
+                                    <item value=""/>
                                     <item value="1"/>
                                     <item value="2"/>
                                     <item value="3"/>
@@ -947,23 +949,24 @@
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
-                                  <text value="Year"/>
+                                  <background color="-16645627"/>
+                                  <enabled value="false"/>
+                                  <focusable value="false"/>
+                                  <font name="Eras Demi ITC" size="18" style="0"/>
+                                  <foreground color="-16645627"/>
+                                  <text value="Level"/>
                                 </properties>
                               </component>
-                              <component id="25b57" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                              <component id="25b57" class="javax.swing.JComboBox" binding="LECSemesterCombobox">
                                 <constraints>
                                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
+                                  <font name="Eras Demi ITC" size="18"/>
                                   <model>
+                                    <item value=""/>
                                     <item value="1"/>
                                     <item value="2"/>
-                                    <item value="3"/>
-                                    <item value="4"/>
-                                    <item value="5"/>
-                                    <item value="6"/>
-                                    <item value="7"/>
-                                    <item value="8"/>
                                   </model>
                                 </properties>
                               </component>
@@ -972,6 +975,7 @@
                                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
+                                  <font name="Eras Demi ITC" size="18" style="0"/>
                                   <text value="Semester"/>
                                 </properties>
                               </component>
