--- a/System/TecSys/src/HomePage/AdminHomePage.form
+++ b/System/TecSys/src/HomePage/AdminHomePage.form
@@ -1966,7 +1966,7 @@
                                                               </component>
                                                             </children>
                                                           </grid>
-                                                          <grid id="d2fa2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                                          <grid id="d2fa2" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                                             <margin top="0" left="0" bottom="0" right="0"/>
                                                             <constraints>
                                                               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1982,6 +1982,14 @@
                                                                   <model/>
                                                                 </properties>
                                                               </component>
+                                                              <component id="c415e" class="javax.swing.JButton" binding="addCourseButton" default-binding="true">
+                                                                <constraints>
+                                                                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                                                </constraints>
+                                                                <properties>
+                                                                  <text value="Add Course"/>
+                                                                </properties>
+                                                              </component>
                                                             </children>
                                                           </grid>
                                                         </children>
@@ -1995,44 +2003,7 @@
                                                     </constraints>
                                                     <properties/>
                                                     <border type="none"/>
-                                                    <children>
-                                                      <grid id="4d8a2" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                        <margin top="0" left="0" bottom="0" right="0"/>
-                                                        <constraints>
-                                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                        </constraints>
-                                                        <properties/>
-                                                        <border type="none"/>
-                                                        <children>
-                                                          <component id="e557b" class="javax.swing.JButton" binding="UserLecturerProfImgBtn">
-                                                            <constraints>
-                                                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
-                                                            </constraints>
-                                                            <properties>
-                                                              <text value="Add Profile Image"/>
-                                                            </properties>
-                                                          </component>
-                                                          <grid id="9c986" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                            <margin top="0" left="0" bottom="0" right="0"/>
-                                                            <constraints>
-                                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                            </constraints>
-                                                            <properties/>
-                                                            <border type="none"/>
-                                                            <children>
-                                                              <component id="6f64e" class="javax.swing.JLabel">
-                                                                <constraints>
-                                                                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                                                                </constraints>
-                                                                <properties>
-                                                                  <text value="Label"/>
-                                                                </properties>
-                                                              </component>
-                                                            </children>
-                                                          </grid>
-                                                        </children>
-                                                      </grid>
-                                                    </children>
+                                                    <children/>
                                                   </grid>
                                                 </children>
                                               </grid>
