--- a/System/TecSys/src/HomePage/AdminHomePage.form
+++ b/System/TecSys/src/HomePage/AdminHomePage.form
@@ -766,10 +766,10 @@
                                                     <properties>
                                                       <font size="16"/>
                                                       <model>
-                                                        <item value=""/>
                                                         <item value="Undergraduate"/>
                                                         <item value="Lecturer"/>
                                                         <item value="Technical Officer"/>
+                                                        <item value="Admin"/>
                                                       </model>
                                                     </properties>
                                                   </component>
@@ -808,6 +808,7 @@
                                                     </constraints>
                                                     <properties>
                                                       <font size="16"/>
+                                                      <model/>
                                                     </properties>
                                                   </component>
                                                 </children>
@@ -3728,14 +3729,14 @@
                                                     <properties/>
                                                     <border type="none"/>
                                                     <children>
-                                                      <component id="337b6" class="javax.swing.JComboBox" default-binding="true">
+                                                      <component id="337b6" class="javax.swing.JComboBox" binding="ADDeleteUserType">
                                                         <constraints>
                                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
                                                         </constraints>
                                                         <properties>
                                                           <font size="16"/>
                                                           <model>
-                                                            <item value=""/>
+                                                            <item value="Admin"/>
                                                             <item value="Undergraduate"/>
                                                             <item value="Lecturer"/>
                                                             <item value="Technical Officer"/>
@@ -3771,12 +3772,13 @@
                                                     <properties/>
                                                     <border type="none"/>
                                                     <children>
-                                                      <component id="a5de6" class="javax.swing.JComboBox" default-binding="true">
+                                                      <component id="a5de6" class="javax.swing.JComboBox" binding="ADDeleteUserID">
                                                         <constraints>
                                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                                                         </constraints>
                                                         <properties>
                                                           <font size="16"/>
+                                                          <model/>
                                                         </properties>
                                                       </component>
                                                     </children>
@@ -3802,7 +3804,7 @@
                                             <properties/>
                                             <border type="none"/>
                                             <children>
-                                              <component id="f97fe" class="javax.swing.JTable">
+                                              <component id="f97fe" class="javax.swing.JTable" binding="ADDeleteTable">
                                                 <constraints/>
                                                 <properties/>
                                               </component>
