--- a/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
+++ b/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
@@ -555,9 +555,9 @@
                                     <properties/>
                                     <border type="none"/>
                                     <children>
-                                      <component id="39953" class="javax.swing.JTextField" binding="textDEP">
+                                      <component id="55ac2" class="javax.swing.JTextField" binding="textField1" default-binding="true">
                                         <constraints>
-                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
+                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                             <preferred-size width="150" height="-1"/>
                                           </grid>
                                         </constraints>
