--- a/System/TecSys/src/HomePage/UndergraduateHomePage.form
+++ b/System/TecSys/src/HomePage/UndergraduateHomePage.form
@@ -1859,7 +1859,7 @@
                   <grid id="e341c" binding="UGTimeTable" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="25" left="25" bottom="25" right="50"/>
                     <constraints>
-                      <card name="Card3"/>
+                      <card name="UGTimeTableCard"/>
                     </constraints>
                     <properties>
                       <enabled value="true"/>
